[package]
name = "mdbook-wavedrom"
version = "0.10.0"
authors = ["Jason Morelli-Harlan <jmorelliharlan@gmail.com>"]
description = "mdbook preprocessor to add mermaid support"
license = "MPL-2.0"
homepage = "https://github.com/JasMoH/mdbook-wavedrom"
repository = "https://github.com/JasMoH/mdbook-wavedrom"
edition = "2018"

[dependencies]
mdbook = "0.4.10"
pulldown-cmark = "0.9.0"
env_logger = "0.9.0"
log = "0.4.11"
clap = "2.33.3"
serde_json = "1.0.57"
toml_edit = "0.13.0"

[dev-dependencies]
assert_cmd = "2.0.0"
pretty_assertions = "1.0.0"
tempfile = "3.3.0"
